--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -19,6 +19,12 @@ security:
             guard:
                 authenticators:
                     - App\Security\LoginAuthenticator
+            form_login: true
+            
+            #remember_me:
+            #    secret: '%kernel.secret%'
+            #    lifetime: 604800
+            #    path: /
 
             # activate different ways to authenticate
 
@@ -31,9 +37,6 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
-        - { path: ^/secure, roles: ROLE_ADMIN, requires_channel: https }
         - { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY, requires_channel: https }
         # catch all other URLs
         - { path: ^/, roles: IS_AUTHENTICATED_ANONYMOUSLY, requires_channel: https }
