--- a/config/packages/sensio_framework_extra.yaml
+++ b/config/packages/sensio_framework_extra.yaml
@@ -1,3 +1,7 @@
 sensio_framework_extra:
-    router:
-        annotations: false
+    router:      { annotations: false } # Deprecated; use routing annotations of Symfony core instead
+    request:     { converters: false, auto_convert: false }
+    view:        { annotations: false }
+    cache:       { annotations: false }
+    security:    { annotations: true }
+    psr_message: { enabled: false } # Defaults to true if the PSR-7 bridge is installed        
