--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -3,6 +3,11 @@ security:
         App\Entity\User:
             algorithm: argon2i
 
+    role_hierarchy:
+        ROLE_USER_PREMIUM: ROLE_USER
+        ROLE_ADMIN:       ROLE_USER_PREMIUM
+        ROLE_SUPER_ADMIN: [ROLE_ADMIN, ROLE_ALLOWED_TO_SWITCH]
+
     # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
     providers:
         # used to reload user from session & other features (e.g. switch_user)
@@ -19,7 +24,12 @@ security:
             guard:
                 authenticators:
                     - App\Security\LoginAuthenticator
-            form_login: true
+            form_login:
+                login_path: app_login
+                check_path: app_login
+            logout: 
+                path: /logout
+                target: /
             
             #remember_me:
             #    secret: '%kernel.secret%'
