--- a/config/packages/translation.yaml
+++ b/config/packages/translation.yaml
@@ -1,6 +1,14 @@
+#framework:
+#    default_locale: '%locale%'
+#    translator:
+#        default_path: '%kernel.project_dir%/translations'
+#        fallbacks:
+#            - '%locale%'
 framework:
     default_locale: '%locale%'
     translator:
         default_path: '%kernel.project_dir%/translations'
         fallbacks:
-            - '%locale%'
+            - 'en'
+            - 'it'
+            - 'fr'
