--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -50,3 +50,4 @@ security:
         - { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY, requires_channel: https }
         # catch all other URLs
         - { path: ^/, roles: IS_AUTHENTICATED_ANONYMOUSLY, requires_channel: https }
+        - { path: ^/chat, roles: IS_AUTHENTICATED_ANONYMOUSLY, requires_channel: http }
