--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
         "php": "^7.1.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "cboden/ratchet": "^0.4.1",
         "friendsofphp/php-cs-fixer": "^2.13",
         "sensio/framework-extra-bundle": "^5.2",
         "symfony/asset": "*",
